[gd_scene load_steps=2 format=3 uid="uid://action_panel"]

[ext_resource type="Script" path="res://Modules/TRPG/Scripts/action_panel.gd" id="1_panel"]

[node name="ActionPanel" type="Control"]
anchors_preset = 7
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -260.0
offset_top = -140.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_panel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="LabelUnit" type="Label" parent="VBox"]
layout_mode = 2
text = "-"

[node name="PointsRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LabelAP" type="Label" parent="VBox/PointsRow"]
layout_mode = 2
text = "AP"

[node name="APBars" type="HBoxContainer" parent="VBox/PointsRow"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="LabelMP" type="Label" parent="VBox/PointsRow"]
layout_mode = 2
text = "MP"

[node name="MPBars" type="HBoxContainer" parent="VBox/PointsRow"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ButtonsRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnMove" type="Button" parent="VBox/ButtonsRow"]
layout_mode = 2
text = "Move"

[node name="BtnAttack" type="Button" parent="VBox/ButtonsRow"]
layout_mode = 2
text = "Attack"

[node name="BtnEndTurn" type="Button" parent="VBox/ButtonsRow"]
layout_mode = 2
text = "End Turn"
